
- WXWIN_COMPATIBILITY_2_4 doesn't exist any more, please update your code if
  you still relied on features deprecated since version 2.4

- wxDC classes hierarchy has changed, if you derived any classes from wxDC you
  need to review them as wxDC doesn't have any virtual methods any longer and
  uses delegation instead of inheritance to present different behaviours.

- Return type of wxString::operator[] and wxString::iterator::operator* is no
  longer wxChar (i.e. char or wchar_t), but wxUniChar. This is not a problem
  in vast majority of cases because of conversion operators, but it can break
  code that depends on the result being wxChar.

- The value returned by wxString::c_str() cannot be casted to non-const char*
  or wchar_t* anymore. The solution is to use newly added wxString methods
  char_str() (which returns a buffer convertible to char*) or wchar_str()
  (which returns a buffer convertible to wchar_t*). These methods are
  available in wxWidgets 2.8 series beginning with 2.8.4 as well.

- The value returned by wxString::operator[] or wxString::iterator cannot be
  used in switch statements anymore, because it's a class instance. Code like
  this won't compile:
     switch (str[i]) { ... }
  and has to be replaced with this:
     switch (str[i].GetValue()) { ... }

- Return type of wxString::c_str() is now a helper wxCStrData struct and not
  const wxChar*. wxCStrData is implicitly convertible to both "const char *"
  and "const wchar_t *", so this only presents a problem if the compiler cannot
  apply the conversion. This can happen in 2 cases:

  + There is an ambiguity because the function being called is overloaded to
    take both "const char *" and "const wchar_t *" as the compiler can't choose
    between them. In this case you may use s.wx_str() to call the function
    matching the current build (Unicode or not) or s.mb_str() or s.wc_str() to
    explicitly select narrow or wide version of it.
